--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "copy-webpack-plugin": "5.1.1",
+    "env-path": "^1.0.7",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
@@ -14,11 +16,15 @@
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
     "react-tooltip": "^3.10.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build:prod",
+    "build:dev": "NODE_ENV=development npm run build:app && webpack",
+    "build:prod": "NODE_ENV=production npm run build:app && webpack",
+    "build:app": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
