--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,11 @@
     "128": "icon128.png"
   },
   "permissions": [
-    "storage"
+    "storage", "tabs", "#APP_URL"
   ],
+  "background": {
+    "persistent": true,
+    "scripts": ["background.js"]
+  },
   "content_security_policy": "script-src 'self' 'sha256-5As4+3YpY62+l38PsxCEkjB1R4YtyktBtRScTJ3fyLU='; object-src 'self'"
 }
